# nezuko-run

./: .gitignore  pyproject.toml
nezuko_run/: __init__.py  main.py  nezuko_run.py  obstacle.py
nezuko_run/characters/: __init__.py  nezuko.py  zenitsu.py
src/: main.py  nezuko.py  obstacle.py
